Added some debug api requests
