# src/docs/swagger.yaml
@@ -1,11 +1,11 @@
 openapi: 3.0.0
 servers:
-  - url: http://localhost:3000
+  - url: 'http://localhost:3000'
     description: API for my small pet project called LoginLogoutDemo
-  - url: http://localhost:3000
+  - url: 'http://localhost:3000'
     description: Website for my project
 info:
-  version: "1.0.0"
+  version: 1.0.0
   title: LoginLogoutDemoApi
   description: API for my small pet project called LoginLogoutDemo
   contact:
@@ -29,10 +29,10 @@ paths:
               properties:
                 username:
                   type: string
-                  example: "dmitriy123"
+                  example: dmitriy123
                 password:
                   type: string
-                  example: "MySecretPassword"
+                  example: MySecretPassword
       responses:
         '201':
           description: User created successfully
@@ -43,21 +43,11 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "User created"
+                    example: User created
                   userId:
                     type: string
                     format: uuid
-                    example: "550e8400-e29b-41d4-a716-446655440000"
-        '409':
-          description: Username already exists
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Username already exists"
+                    example: 550e8400-e29b-41d4-a716-446655440000
         '400':
           description: Missing username or password
           content:
@@ -67,8 +57,28 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Username and password required"
-
+                    example: Username and password required
+        '409':
+          description: Username already exists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Username already exists
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    x-stoplight:
+                      id: f55pnq15tlz07
   /api/users/login:
     post:
       summary: Login user and get JWT token
@@ -87,13 +97,13 @@ paths:
               properties:
                 username:
                   type: string
-                  example: "dmitriy123"
+                  example: dmitriy123
                 password:
                   type: string
-                  example: "MySecretPassword"
+                  example: MySecretPassword
       responses:
         '200':
-          description: Successful login, returns JWT token
+          description: 'Successful login, returns JWT token'
           content:
             application/json:
               schema:
@@ -101,17 +111,7 @@ paths:
                 properties:
                   token:
                     type: string
-                    example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-        '401':
-          description: Invalid username or password
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Invalid username or password"
+                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
         '400':
           description: Missing username or password
           content:
@@ -121,4 +121,119 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Username and password required"
+                    example: Username and password required
+        '401':
+          description: Invalid username or password
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Invalid username or password
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    x-stoplight:
+                      id: r9zu93kt9sc5l
+      parameters: []
+  /api/users:
+    get:
+      summary: Get all users
+      tags:
+        - Users
+      responses:
+        '200':
+          description: Successfully got users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  x-stoplight:
+                    id: uj1qiy0xamza6
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      x-stoplight:
+                        id: at6q5mh58j2fz
+                      format: uuid
+                      example: 550e8400-e29b-41d4-a716-446655440000
+                    username:
+                      type: string
+                      x-stoplight:
+                        id: 8lmrgln8zsxec
+                      example: dmitriy123
+                    password:
+                      type: string
+                      x-stoplight:
+                        id: hv48ohum32zgq
+                      example: MySecretPassword
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    x-stoplight:
+                      id: 1ogtlhps5m4wa
+      operationId: ''
+  /api/sessions:
+    get:
+      summary: Get all sessions
+      tags:
+        - Users
+      responses:
+        '200':
+          description: Successfully got sessions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  x-stoplight:
+                    id: xtw8337y978l2
+                  type: object
+                  properties:
+                    session_id:
+                      type: string
+                      x-stoplight:
+                        id: g354rz3s0hxnh
+                      format: uuid
+                      example: 550e8400-e29b-41d4-a716-446655440000
+                    user_id:
+                      type: string
+                      x-stoplight:
+                        id: usumak3pbgbtx
+                      format: uuid
+                      example: 550e8400-e29b-41d4-a716-446655440000
+                    created_at:
+                      type: string
+                      format: date-time
+                    expires_at:
+                      type: string
+                      x-stoplight:
+                        id: yglbc99yyck0k
+                      format: date-time
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    x-stoplight:
+                      id: kggk5j0ssfh2q
